overflow fixed

--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -18,8 +18,6 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    overflow-x: hidden; /* Hide horizontal overflow */
-    overflow-y: auto;   /* Add vertical scrollbar when necessary */
 }
 
 header {
@@ -503,10 +501,10 @@ p {
     background-color: #005b9a; /* Blue background for contrast */
     text-align: center; /* Center the content */
     color: white; /* White text for better visibility */
-    padding: 0rem 0rem; /* More padding for a call to action section */
-    margin: -2rem;
-    margin-top: 2rem;
-    margin-bottom: 6rem;
+    padding: 8rem 2rem; /* More padding for a call to action section */
+    margin-bottom: 3rem;
+    padding-top: 4rem;
+    margin-top: 0rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
   }
 
@@ -536,8 +534,6 @@ p {
 .features {
   background-color: #f5f5f5; /* Light background for better contrast */
   padding: 0rem 0rem; /* More padding for a call to action section */
-  margin-left: -2rem;
-  margin-right: -2rem;
   display: grid;
   text-align: center;
   padding-top: 15%;
@@ -552,6 +548,7 @@ p {
 
 .feature-box {
   display: flex;
+  padding: 3rem;
   flex-wrap: wrap; /* Allow items to wrap if needed */
   justify-content: space-around; /* Evenly distribute feature boxes */
 }
@@ -586,9 +583,7 @@ p {
 
   .business-spotlight {
     background-color: #f5f5f5; /* Light background for better contrast */
-    padding: 0rem 0rem; /* More padding for a call to action section */
-    margin-left: -2rem;
-    margin-right: -2rem;
+    * More padding for a call to action section */
     margin-bottom: 2rem;
     display: grid;
     text-align: center;
@@ -646,7 +641,7 @@ p {
   .testimonials {
     background-color: #f5f5f5; /* Light background for better contrast */
     padding: 2rem; /* More padding for a call to action section */
-    margin: -1rem; /* Add some padding */
+    margin: 3rem; /* Add some padding */
     margin-bottom: 4rem;
     margin-top: -1rem;
     text-align: center;
@@ -671,12 +666,12 @@ p {
     display: block;
     align-items: center;
     position: relative;
-    margin-bottom: -5rem;
-    padding: 3rem;
+    margin-bottom: -rem;
+    padding: 1rem;
   }
   
   .testimonials img {
-    width: 100%;
+    width: 80%;
     height: auto;
     border-radius: 5%;
   }
@@ -766,7 +761,8 @@ footer {
     text-align: center;
     padding: 2rem 3rem; /* More padding for a call to action section */
     margin: -3rem;
-    margin-right: -2rem;
+    margin-left: -2rem;
+    margin-right: 0rem;
 }
 
 footer .container p {
